# rust-sqlxinsert

./: Cargo.toml  README.md
src/: main.rs
