[package]
name = "rust-sqlxinsert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
sqlx = { version = "0.5.7", features = ["sqlx-macros", "postgres", "runtime-tokio-native-tls"] }
sqlxinsert = "0.2.2"
tokio = { version = "1.10.1", features = ["macros"] }
